--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3,6 +3,7 @@ header {
     color: #2E6E9E;
     font-size: 20px;
     padding: 5px 20px;
+    margin: 20px 0;
 }
 
 footer {
@@ -13,6 +14,8 @@ footer {
     margin: 20px 0;
 }
 
-table, th, td {
-    border:2px solid #2E6E9E;
+table, tr, th {
+    padding: 6px;
+    border: 2px solid #2E6E9E;
 }
+
