--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,28 +1,76 @@
-header {
-    background: none repeat scroll 0 0 #A6DBF4;
-    color: #025075;
+body {
+    color: #222;
+    background: #fff;
+}
+.header .resume-control-h2 {
+    margin-left: 16px;
+    font-family: Open Sans, serif;
+    font-style: normal;
+    font-weight: 600;
     font-size: 20px;
-    padding: 5px 20px;
-    margin: 20px 0;
+    color: #4A586E;
+}
+.resume-control-h2 {
+    text-align: center;
 }
 
-footer {
-
-    background: none repeat scroll 0 0 #A6DBF4;
-    color: #025075;
-    font-size: 20px;
-    padding: 5px 20px;
-    margin: 20px 0;
+.table {
+    text-align: center;
+    width: 80%;
+    border: none;
+    margin-bottom: 20px;
+    border-collapse: separate;
 }
 
-table {
-    padding: 6px;
-    border: 5px solid #0C95D7;
+.table thead th {
+    align-content: center;
+    font-weight: bold;
+    text-align: center;
+    border: none;
+    padding: 10px 15px;
+    background: #EDEDED;
+    font-size: 14px;
+    border-top: 1px solid #ddd;
 }
 
-tr, th, td {
-    padding: 10px;
-    border: 3px solid #0C95D7;
+.table tr th:first-child, .table tr td:first-child {
+    border-left: 1px solid #ddd;
+}
+
+.table tr th:last-child, .table tr td:last-child {
+    border-right: 1px solid #ddd;
+}
+
+.table thead tr th:first-child {
+    border-radius: 20px 0 0 0;
+}
+
+.table thead tr th:last-child {
+    border-radius: 0 20px 0 0;
+}
+
+.table tbody td {
+    text-align: center;
+    border: none;
+    padding: 10px 15px;
+    font-size: 14px;
+    vertical-align: top;
+}
+
+.table tbody tr:nth-child(even) {
+    background: #F8F8F8;
+}
+
+.table tbody tr:last-child td {
+    border-bottom: 1px solid #ddd;
+}
+
+.table tbody tr:last-child td:first-child {
+    border-radius: 0 0 0 20px;
+}
+
+.table tbody tr:last-child td:last-child {
+    border-radius: 0 0 20px 0;
 }
 
 dl {
