--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,104 +1,81 @@
-body {
-    color: #222;
-    background: #fff;
+hr {
+    margin-left: auto;
+    width: 70%;
+    padding: 0;
+    height: 4px;
+    border: none;
+    border-top: 1px solid #333;
+    box-shadow: 0 10px 10px -10px #8c8b8b inset;
 }
-.header .resume-control-h2 {
-    margin-left: 16px;
-    font-family: Open Sans, serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
+.resumes-title {
+    font-size: 30px;
+    line-height: 100px;
+    text-align: center;
+    background: #EDEFF2;
     color: #4A586E;
 }
-.resume-control-h2 {
-    text-align: center;
+
+.add-resume {
+    margin-top: 20px;
+    margin-right: 20%;
+    font-size: 15px;
+    text-align: right;
+    color: #4A586E;
+}
+.full-name {
+    margin-left: 15%;
+    margin-top: 15px;
+    color: #4A586E;
+    text-align: left;
+    font-size: 25px;
+}
+.contacts {
+    margin-left: 15%;
+    margin-top: 15px;
+    color: #4A586E;
+    text-align: left;
+    font-size: 15px;
+}
+
+.tables {
+    margin-top: 20px;
 }
 
 .table {
-    text-align: center;
-    width: 80%;
-    border: none;
-    margin-bottom: 20px;
-    border-collapse: separate;
+    margin: auto;
+    border: 1px solid #eee;
+    table-layout: fixed;
+    width: 70%;
 }
 
-.table thead th {
-    align-content: center;
+.table th {
+    text-align: center;
     font-weight: bold;
+    padding: 5px;
+    background: #EDEFF2;
+    border: 1px solid #dddddd;
+}
+
+.table td {
     text-align: center;
-    border: none;
-    padding: 10px 15px;
-    background: #EDEDED;
-    font-size: 14px;
-    border-top: 1px solid #ddd;
+    padding: 5px 10px;
+    border: 1px solid #eee;
 }
 
-.table tr th:first-child, .table tr td:first-child {
-    border-left: 1px solid #ddd;
-}
-
-.table tr th:last-child, .table tr td:last-child {
-    border-right: 1px solid #ddd;
-}
-
-.table thead tr th:first-child {
-    border-radius: 20px 0 0 0;
-}
-
-.table thead tr th:last-child {
-    border-radius: 0 20px 0 0;
-}
-
-.table tbody td {
-    text-align: center;
-    border: none;
-    padding: 10px 15px;
-    font-size: 14px;
-    vertical-align: top;
+.table tbody tr:nth-child(odd) {
+    background: #fff;
 }
 
 .table tbody tr:nth-child(even) {
-    background: #F8F8F8;
-}
-
-.table tbody tr:last-child td {
-    border-bottom: 1px solid #ddd;
-}
-
-.table tbody tr:last-child td:first-child {
-    border-radius: 0 0 0 20px;
-}
-
-.table tbody tr:last-child td:last-child {
-    border-radius: 0 0 20px 0;
-}
-
-dl {
-    background: none repeat scroll 0 0 #FAFAFA;
-    margin: 8px 0;
-    padding: 0;
-}
-
-dt {
-    display: inline-block;
-    width: 170px;
-}
-
-dd {
-    display: inline-block;
-    margin-left: 8px;
-    vertical-align: top;
+    background: #EDEFF2;
 }
 
 a {
-    color: #025075;
-    text-decoration: underline double #025075;
+    color: #4A586E;
+    text-decoration: none;
 }
 
-a:active {
-    color: #025075;
-}
-
-a:visited {
-    color: #025075;
+a:hover {
+    text-decoration: underline;
+    color: #4A586E;
 }
