--- a/web/css/style.css
+++ b/web/css/style.css
@@ -152,3 +152,31 @@ a:hover {
     text-decoration: underline;
     color: #4A586E;
 }
+footer {
+    background: none repeat scroll 0 0 #FAFAFA;
+    color: #4A586E;
+    font-size: 20px;
+    padding: 5px 20px;
+    margin: 20px 0;
+}
+
+dl {
+    background: none repeat scroll 0 0 #FAFAFA;
+    margin: 8px 0;
+    padding: 0;
+}
+
+dt {
+    display: inline-block;
+    width: 170px;
+}
+
+dd {
+    display: inline-block;
+    margin-left: 8px;
+    vertical-align: top;
+}
+
+h3 {
+    margin: 15px 0 5px;
+}
